Release history for Statocles-AppRole-ExtraFeeds

{{$NEXT}}
 - Bump version on Beam::Wire for interop with Beam::Wire 'with' mechanics.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - test: ↑1

0.001000 2016-02-24T15:13:45Z 55ebf9f
 - First version.