@@ -236,4 +236,9 @@ Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
+[DynamicPrereqs]
+-delimiter = |
+-raw = |# Interop for "with"
+-raw = |runtime_requires("Beam::Wire",1.016) if has_module("Beam::Wire","<1.016");
+
 [Prereqs]
