@@ -1,3 +1,5 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 0.001001
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::DynamicPrereqs
