@@ -5,6 +5,8 @@ Release history for Statocles-AppRole-ExtraFeeds
 
  [Dependencies::Stats]
  - Dependencies changed since 0.001000, see misc/*.deps* for details
+ - configure: +2
+ - develop: +1
  - test: ↑1
 
 0.001000 2016-02-24T15:13:45Z 55ebf9f
